--- a/css/styles.css
+++ b/css/styles.css
@@ -34,14 +34,19 @@ li {
   color: var(--brand-blue-color);
 }
 .logo-studio,
-.nav-links,
-.header-contacts {
+.nav-links {
   color: var(--main-font-color);
+}
+.header-contacts a {
+  color: var(--gray-font-color);
 }
 .nav-links :hover,
 :focus,
 .header-contacts :hover,
 :focus {
+  color: var(--brand-blue-color);
+}
+.active {
   color: var(--brand-blue-color);
 }
 .hero {
@@ -109,8 +114,9 @@ h2 {
 .address,
 .footer-contacts {
   font-size: 14px;
-  line-height: 1.71px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
+  font-style: normal;
   color: var(--main-bcg-color);
 }
 .footer-contacts a {
@@ -136,4 +142,16 @@ h2 {
   color: var(--main-bcg-color);
   background-color: var(--brand-blue-color);
   cursor: pointer;
+}
+.portfolio-cards h2 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.portfolio-cards p {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--gray-font-color);
 }
